# socket-siem-connector

./: .bandit  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  reports.db  requirements.txt  socket-integration-example.py
.github/workflows/: docker-stable.yml  pr-preview.yml  release.yml  version-check.yml
core/: __init__.py  sqlite.py  tools.py
core/connectors/: elastic.py  panther.py  socket_csv.py
core/socket_reports/: __init__.py  classes.py
core/socketdev/: __init__.py  socket_classes.py
core/socketdev/dependencies/: __init__.py
core/socketdev/npm/: __init__.py
core/socketdev/openapi/: __init__.py
core/socketdev/org/: __init__.py
core/socketdev/quota/: __init__.py
core/socketdev/report/: __init__.py
core/socketdev/repositories/: __init__.py
core/socketdev/settings/: __init__.py
panther/: README.md  socket.schema
scripts/: build.sh
socketsync/: __init__.py  classes.py  core.py  exceptions.py
socketsync/connectors/: __init__.py  bigquery.py  csv.py  elastic.py  sentinel.py  slack.py  sumologic.py  webhook.py
splunk/: README.md
