[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "socketsync"
requires-python = ">= 3.9"
dependencies = [
    'requests',
    "socket-sdk-python"
]
readme = "README.md"
description = "Socket Security CLI for CI/CD"
keywords = ["socketsync", "socket.dev", "sca", "oss", "security"]
authors = [
    {name = "Douglas Coburn", email = "douglas@socket.dev"}
]
maintainers = [
    {name = "Douglas Coburn", email = "douglas@socket.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
socketcli = "socketsync.socketsync:cli"

[project.urls]
Homepage = "https://socket.dev"

[tool.setuptools.packages.find]
include = [
    "socketsync",
    "socketsync.core",
    "socketsync.connectors"
]

[tool.setuptools.dynamic]
version = {attr = "socketsync.__version__"}